# casamento-gabilud-ws-rust

./: Cargo.toml  README.md  run_debug  run_prod
src/: main.rs
src/app/: mod.rs  utils.rs
src/app/components/: mongo.rs
src/app/models/: app.rs  user.rs
src/app/routes/: invite.rs
