[package]
name = "casamento-gabilud-ws-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
env_logger = "0.10.0"
mongodb = "2.6.0"
serde = { version = "1.0.183", features = ["derive"] }
